@@ -430,6 +430,7 @@
             --add-opens=java.desktop/java.awt=ALL-UNNAMED
             --add-opens=java.desktop/java.awt.geom=ALL-UNNAMED
             --add-opens=java.desktop/java.awt.font=ALL-UNNAMED
+            --add-opens=java.desktop/java.beans=ALL-UNNAMED
           </jvmArguments>
           <additionalClasspathElements>
             <element>${basedir}/../core/target/classes</element>
